--- a/vitae.html
+++ b/vitae.html
@@ -39,7 +39,7 @@
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
 <HR>
-<div id="hist_work"><H5></H5></div>
+<div id="hist_work"><H4>Database Administration(DBA)</H4><H5>Bank of America/MBNA Treasury Systems, M&T Bank/Wilmington Trust Treasury Systems, Bank of America Consumer Services, Bank of America Global Operations, Centurylink/Level(3) Network Operations, Cincinnati Bell Enterprise Sales Operations</H5></div>
 <div id="hist_education"><H4>University Programs(5)</H4><H5>University of Michigan, University of Delaware, University of South Carolina, University of Pennsylvania - Wharton School</H5></div>
 <div id="hist_appsuites">
 <H4>Network Management Tools(11)</H4><H5>Cisco Works, BMC Patrol, Kratos Networks, IBM Netcool, IBM Maximo, HPE Peregrine, HPE Openview, Ivanti LandeskManager, Microsoft SMS, Alcatel, Paradyne NMS, Greenville GEM</H5> 
@@ -47,8 +47,10 @@
 <H4>Restaurant Systems(7)</H4><H5>Aloha, Micros, POSI, KDS, FiveGuys POS, Panera POS, FusionCommerce</H5>
 </div>    
 <div id="hist_coding">
-    <H4>Programming Languages(17)</H5>
-    <H5>Lisp, Fortran, C, C++, C#, Python, HTML, Javascript, ReactJS/IonicJS, Visual Basic, Visual C++, Java/JavaFX, Motorola Assembler, ProcomPlus SL, NodeJS, UnixShell Scripting, Haskell</H5>
+    <H4>REST Frameworks</H5>
+    <H5>Microsoft Entity Framework on VS2022+, NodeJS-Express, JoomlaAPI, WordpressAPI, MiniOrangePlugin</H5>
+    <H4>Programming Languages(19)</H5>
+    <H5>Lisp, Fortran, C, C++, C#, PHP, Webmin/Virtual SL, Python, HTML, Javascript, ReactJS/IonicJS, Visual Basic, Visual C++, Java/JavaFX, Motorola Assembler, ProcomPlus SL, NodeJS, UnixShell Scripting, Haskell</H5>
 </div>
 <div id="hist_sql">
     <H4>Database Platforms(7)</H5>
