--- a/vitae.html
+++ b/vitae.html
@@ -51,10 +51,11 @@
     <H5>Microsoft Entity Framework on VS2022+, NodeJS-Express, JoomlaAPI, WordpressAPI, MiniOrangePlugin</H5>
     <H4>Programming Languages(19)</H5>
     <H5>Lisp, Fortran, C, C++, C#, PHP, Webmin/Virtual SL, Python, HTML, Javascript, ReactJS/IonicJS, Visual Basic, Visual C++, Java/JavaFX, Motorola Assembler, ProcomPlus SL, NodeJS, UnixShell Scripting, Haskell</H5>
+    <H4>Visualization Frameworks</H4><H5>SAP Crystal Reports, Microsoft Office Tools, Python Libraries, RStudio/RFrameworks, Infovista Network Management Systems.</H5>
 </div>
 <div id="hist_sql">
-    <H4>Database Platforms(7)</H5>
-    <H5>MySql/MariaDB, MySql Clusters, MS/Azure SQLServer, Oracle 19i+, Postgres17+, AzCosmosDB/MongoDB, PervasiveSQL, MSAccess</H5>
+    <H4>Database Platforms(9)</H5>
+    <H5>MySql/MariaDB, MySql Clusters, MS/Azure SQLServer, Oracle 19i+, Postgres17+, AzCosmosDB/MongoDB, PervasiveSQL, MSAccess, WatcomSQL, ApacheHiveHQX</H5>
 </div> 
 <div id="hist_projects"><H5></H5></div>        
 <HR>
