--- a/vitae.html
+++ b/vitae.html
@@ -47,11 +47,11 @@
 <H4>Restaurant Systems(7)</H4><H5>Aloha, Micros, POSI, KDS, FiveGuys POS, Panera POS, FusionCommerce</H5>
 </div>    
 <div id="hist_coding">
-    <H4>REST Frameworks</H5>
+    <H4>REST Frameworks(5)</H5>
     <H5>Microsoft Entity Framework on VS2022+, NodeJS-Express, JoomlaAPI, WordpressAPI, MiniOrangePlugin</H5>
     <H4>Programming Languages(19)</H5>
     <H5>Lisp, Fortran, C, C++, C#, PHP, Webmin/Virtual SL, Python, HTML, Javascript, ReactJS/IonicJS, Visual Basic, Visual C++, Java/JavaFX, Motorola Assembler, ProcomPlus SL, NodeJS, UnixShell Scripting, Haskell</H5>
-    <H4>Visualization Frameworks</H4><H5>SAP Crystal Reports, Microsoft Office Tools, Python Libraries, RStudio/RFrameworks, Infovista Network Management Systems.</H5>
+    <H4>Visualization Frameworks(5)</H4><H5>SAP Crystal Reports, Microsoft Office Tools, Python Libraries, RStudio/RFrameworks, Infovista Network Management Systems.</H5>
 </div>
 <div id="hist_sql">
     <H4>Database Platforms(9)</H5>
