--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -13,6 +13,7 @@
   width: 33%;
   padding: 10px;
   height: 300px; /* Should be removed. Only for demonstration */
+  margin-left: 10px;
 }
     
 .column2 {
@@ -20,6 +21,7 @@
   width: 50%;
   padding: 10px;
   height: 300px; /* Should be removed. Only for demonstration */
+  margin-left: 10px;
 }
     
 /* Clear floats after the columns */
