--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -23,9 +23,15 @@
   height: 300px; /* Should be removed. Only for demonstration */
   margin-left: 10px;
 }
+
+.row
+{
+vertical-align: middle;
+text-align: center;
+}
     
-/* Clear floats after the columns */
-.row:after {
+.row:after 
+{
   content: "";
   display: table;
   clear: both;
