--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -26,8 +26,7 @@
 
 .row
 {
-vertical-align: middle;
-text-align: center;
+/*vertical-align: middle; No Need to style the row here... using align inline.*/
 }
     
 .row:after 
@@ -70,7 +69,7 @@ text-align: center;
     <div align="center"><span align="center" style="text-align: center; vertical-align: middle;"><img src="./images/p.png" width="32%" height="300px"/><img src="./images/p2.png" width="32%" height="300px"/><img src="./images/p3.png" width="32%" height="300px"/></span></div>
 </div>
 
-<div class="row">
+<div class="row" align="center">
   <div class="column1" style="background-color:lightblue; border: 2px solid black;">
     <h2>My Webmaster Social Links</h2>
        <ul>
