--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -37,6 +37,14 @@
   vertical-align: middle;
   text-align: center;
 }
+img // OVERRIDE THE SITE DEFAULT WHICH LOOKS TERRIBLE HERE...
+{
+margin-left: 5px;
+margin-right: 5px;
+margin-top: 5px;
+margin-bottom: 5px;    
+margin: auto 0;
+}
 </style>
 </head>    
 <body>
