--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -27,6 +27,8 @@
 .row
 {
 /*vertical-align: middle; No Need to style the row here... using align inline.*/
+margin-left: 10px;
+margin-right: 10px;
 }
     
 .row:after 
