--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -13,6 +13,7 @@
   width: 32%;
   padding: 10px;
   margin-left: 10px;
+  text-align: left;
 }
     
 .column2 {
@@ -20,6 +21,7 @@
   width: 50%;
   padding: 10px;
   margin-left: 10px;
+  text-align: left;
 }
 
 .row
