--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -14,6 +14,7 @@
   padding: 10px;
   margin-left: 10px;
   text-align: left;
+  max-height: 350px;
 }
     
 .column2 {
@@ -22,6 +23,7 @@
   padding: 10px;
   margin-left: 10px;
   text-align: left;
+  max-height: 350px;  
 }
 
 .row
