--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -72,6 +72,7 @@ margin: auto 0;
 <div class="container">
 <div align="center"><H1>Portfolio</H1></div>
 <div align="center">John S. Stritzinger</div>
+<div align="center">Global Tech Executive</div>
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
