--- a/vitae.html
+++ b/vitae.html
@@ -35,6 +35,7 @@
 <div class="container">    
 <div align="center"><H1>Selected Vitae</H1></div>
 <div align="center">John S. Stritzinger</div>
+<div align="center">Global Tech Executive</div>    
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
