--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -14,6 +14,7 @@
   padding: 10px;
   margin-left: 10px;
   text-align: left;
+  min-height: 300px;
   max-height: 350px;
 }
     
@@ -23,6 +24,7 @@
   padding: 10px;
   margin-left: 10px;
   text-align: left;
+  min-height: 300px;  
   max-height: 350px;  
 }
 
