--- a/242index.html
+++ b/242index.html
@@ -127,7 +127,7 @@ a
 <HR>
 <div align="center">
 <div class="row">
-<div class="column1" style="background-color: pink;">
+<div class="column1" style="background-color: pink; border: 2px solid black;">
     <span align="center" style="align: left;"><H3>Quick Links</H3></span><HR>
     <ul>
     <li><a href="./assignments/01-basic-html/index.html">CSCE242 - Assignment One</a></li>
@@ -137,7 +137,7 @@ a
 </ul>
 </div>
 <div class="column" style="background-color: lightgreen;"><div align="center"><span align=center><img src="image1.png" width="46%" height="330px"><img src="john2.jpg" width="46%" height="330px"></span></div></div>
-<div class="column1" style="background-color: lightblue;">
+<div class="column1" style="background-color: lightblue; border: 2px solid black;">
   <div class="tablecontainer">
     <span style="align: left;"><H3>SiteMap</H3></span><HR>
     <table>
