--- a/vitae.html
+++ b/vitae.html
@@ -39,6 +39,7 @@
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
+<div align="center"><span align=center><img src="./images/image1.png" width="370px" height="370px"></span></div>    
 <HR>
 <div id="hist_work"><H4>Database Administration(DBA)</H4><H5>Bank of America/MBNA Treasury Systems, M&T Bank/Wilmington Trust Treasury Systems, Bank of America Consumer Services, Bank of America Global Operations, Centurylink/Level(3) Network Operations, Cincinnati Bell Enterprise Sales Operations, Bank of America Call Center Operations</H5></div>
 <div id="hist_education"><H4>University Programs(5)</H4><H5>University of Michigan, University of Delaware, University of South Carolina, University of Pennsylvania - Wharton School</H5></div>
