--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
-<div class="image-row" align="center"><figure><img src="image2.png" width="440px" height="440px"><figcaption>Skiing</figcaption></figure><figure><img src="image3.png" width="440px" height="440px"><figcaption>OutDoor Adventures</figcaption></figure></div>    
+<div class="image-row" align="center"><figure><img src="./images/image2.png" width="440px" height="440px"><figcaption>Skiing</figcaption></figure><figure><img src="./images/image3.png" width="440px" height="440px"><figcaption>OutDoor Adventures</figcaption></figure></div>    
 </div>
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
