--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ a
 <div align="center">John S. Stritzinger</div>
 <div align="center">University of South Carolina</div>
 <div align="center">Computer Science 242 - Web Applications</div>
-<div align="center"><span align=center><img src="image1.png" width="370px" height="370px"></span></div>
+<div align="center"><span align=center><img src="./images/image1.png" width="370px" height="370px"></span></div>
 <ul id="linkcomponents">
   <H2 id="headerclassoverview">Class Overview</H2>
   <p id="classdescription">This is a Web Development class focused on HTML, CSS, Javascript and React Programming Class at the University of South Carolina with both UI, and BackOffice Tools covered in detail. This course is the second in the sequence following Computer Science 102(CSS/Javascript).</p>
