--- a/interests.html
+++ b/interests.html
@@ -53,7 +53,7 @@
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
-<div class="image-row" align="center"><figure><img src="image4.png" width="440px" height="440px"><figcaption>Youth Soccer</figcaption></figure><figure><img src="image5.png" width="440px" height="440px"><figcaption>Golf</figcaption></figure></div>    
+<div class="image-row" align="center"><figure><img src="./images/image4.png" width="440px" height="440px"><figcaption>Youth Soccer</figcaption></figure><figure><img src="./images/image5.png" width="440px" height="440px"><figcaption>Golf</figcaption></figure></div>    
 </div>
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
