--- a/usc.html
+++ b/usc.html
@@ -46,7 +46,7 @@
 <div align="center">Graduate Assistant - University of South Carolina</div>
 <div align="center">1800 Washington Street</div>
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
-<div class="image-row" align="center"><figure><img src="image6.png" width="440px" height="440px"><figcaption>USC Sports</figcaption></figure><figure><img src="image7.png" width="440px" height="440px"><figcaption>Campus Views</figcaption></figure></div>    
+<div class="image-row" align="center"><figure><img src="./images/image6.png" width="440px" height="440px"><figcaption>USC Sports</figcaption></figure><figure><img src="./images/image7.png" width="440px" height="440px"><figcaption>Campus Views</figcaption></figure></div>    
 </div>
 </body>
 <footer><div class="footer">&copy2025&nbsp&nbspCocky Consulting, Inc</div></footer>
