Added New HW3 Format

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@ a
   <H2 id="classassignments">Assignments</H2>
   <li><a href="https://jssg33.github.io/usc242/assignments/01-basic-html/index.html" style="text-decoration:none;">Assignment One(1/18) - 242 Home Page with Site Css</a></li>
   <li><a href="https://jssg33.github.io/usc242/assignments/02-basic-css/index.html" style="text-decoration:none;">Assignment Two(1/21) - USC Basketball w Basic CSS</li>
+  <li><a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html" style="text-decoration:none;">Assignment Three(1/22) - Modified Layout</li>
 </ul>
 <BR><BR><BR>
 </div>
