--- a/assignments/03-layout-design/index.html
+++ b/assignments/03-layout-design/index.html
@@ -162,14 +162,14 @@ ul li a:hover {
 </ul>
 
 <div class="container">    
-<div align="center"><h1>University of South Carolina Men's Basketball</h1></div>
-<div align="center"><h2>2025-2026 Calendar Year</h2></div>
+<div align="center"><h1>Portia's Layout Page</h1></div>
+<div align="center"><h2>Spring 26</h2></div>
 <HR>
 <div align="center">
 <div class="row">
 <div class="column1" style="background-color: pink;">
   <span align="center" style="align: left;"><H3>Sports Quick Links</H3></span><HR>
-  <ul>
+  <ol>
     <li><a href="https://www.sc.edu" target="_blank">SC Home Page</a></li>
     <li><a href="https://sc.edu/athletics/" target="_blank">SC Athletics Home Page</a></li>
     <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>    
@@ -177,7 +177,7 @@ ul li a:hover {
     <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>
     <li><a href="https://www.espn.com" target="_blank">ESPN</a></li>
     <li><a href="https://gamecocksonline.com/sports/mbball/cumestats/">Team Stats</a></li>
-</ul>
+</ol>
 </div>
 <div class="column" style="background-color: #73000a;"><div align="center"><span align=center><img src="./images/usc1.jpg" width="47%" height="330px"><img src="./images/usc4.png" width="47%" height="330px"></span></div></div>
 <div class="column1" style="background-color: lightblue;">
