--- a/assignments/03-layout-design/index.html
+++ b/assignments/03-layout-design/index.html
@@ -168,8 +168,8 @@ ul li a:hover {
 <div align="center">
 <div class="row">
 <div class="column1" style="background-color: pink;">
-  <span align="center" style="float: left; margin-left: -10px;"><H3>Quick Links</H3></span><HR>
-  <ol>
+<span align="center" ><H3>Quick Links</H3></span><HR>
+  <ol style="float: left; margin-left: -5px;">
     <li><a href="https://www.sc.edu" target="_blank">SC Home Page</a></li>
     <li><a href="https://sc.edu/athletics/" target="_blank">SC Athletics Home Page</a></li>
     <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>    
