--- a/assignments/03-layout-design/index.html
+++ b/assignments/03-layout-design/index.html
@@ -169,7 +169,7 @@ ul li a:hover {
 <div class="row">
 <div class="column1" style="background-color: pink;">
 <span align="center" ><H3>Quick Links</H3></span><HR>
-  <ol style="float: left; margin-left: -5px;">
+  <ol style="float: left; margin-left: -5px; text-align: left;">
     <li><a href="https://www.sc.edu" target="_blank">SC Home Page</a></li>
     <li><a href="https://sc.edu/athletics/" target="_blank">SC Athletics Home Page</a></li>
     <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>    
