--- a/242index.html
+++ b/242index.html
@@ -132,6 +132,7 @@ a
     <ul>
     <li><a href="./assignments/01-basic-html/index.html">CSCE242 - Assignment One</a></li>
     <li><a href="./assignments/02-basic-css/index.html">CSCE242 - Assignment Two</a></li>
+    <li><a href="https://jssg33.github.io/usc242/assignments/03-layout-design/index.html" style="text-decoration:none;">CSCE242 - Assignment Three</li>
     <li><a href="https://www.reuters.com" target="_blank">Reuters</a></li>    
     <li><a href="https://www.bbc.com" target="_blank">BBC</a></li>    
 </ul>
