--- a/assignments/03-layout-design/index.html
+++ b/assignments/03-layout-design/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Site with 2nd Layer Navigation</title>
+    <title>PortiasLayout-Flexbox</title>
 <!--John S. Stritzinger
     CSCE242
     Spring 2026
