--- a/assignments/03-layout-design/index.html
+++ b/assignments/03-layout-design/index.html
@@ -179,7 +179,7 @@ ul li a:hover {
     <li><a href="https://gamecocksonline.com/sports/mbball/cumestats/">Team Stats</a></li>
 </ol>
 </div>
-<div class="column" style="background-color: #73000a;"><div align="center"><span align=center><img src="./images/miami1.jpg" width="47%" height="330px"><img src="./images/miam2.jpg" width="47%" height="330px"></span></div></div>
+<div class="column" style="background-color: #73000a;"><div align="center"><span align=center><img src="./images/miami1.jpg" width="47%" height="330px"><img src="./images/miami2.jpg" width="47%" height="330px"></span></div></div>
 <div class="column1" style="background-color: lightblue;">
   <div class="tablecontainer">
     <span style="align: left;"><H3>SiteMap</H3></span><HR>
@@ -195,9 +195,11 @@ ul li a:hover {
 </div>
 </div>
 </div>
-<H3>About South Carolina Mens Basketball</H3>
-<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSouth Carolina Mens Basketball is a Division I competitive basketball team which plays in the Southeastern Conference, one of three most prestigious conferences along with the BigTen, and the ACC which are historic basketball powers. South Carolina is lead by Senior Guard Meechie Johnson(#5) who is their leading scorer for this year.</p>
-<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspThe Mens team has a 2025-2026 record of 11-8 with a recent victory over Southeastern Conference rival Oklahoma at Home in a stadium which hangs the NCAA National Championship Banners of its very popular sister team the Womens Basketball team. The team is seeking to return to the NCAA March Madness festivities in the near future. </p>
+<div id="VeryImp">
+<H3>VeryImportantText</H3>
+<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
 <HR>
 <BR><BR><BR>
 </div>
