--- a/assignments/03-layout-design/index.html
+++ b/assignments/03-layout-design/index.html
@@ -179,7 +179,7 @@ ul li a:hover {
     <li><a href="https://gamecocksonline.com/sports/mbball/cumestats/">Team Stats</a></li>
 </ol>
 </div>
-<div class="column" style="background-color: #73000a;"><div align="center"><span align=center><img src="./images/miami1.jpg" width="47%" height="330px"/><img src="./images/miami3.jpg" width="47%" height="330px"/></span></div></div>
+<div class="column" style="background-color: lightgreen;"><div align="center"><span align=center><img src="./images/miami1.jpg" width="47%" height="330px"/><img src="./images/miami3.jpg" width="47%" height="330px"/></span></div></div>
 <div class="column1" style="background-color: lightblue;">
   <div class="tablecontainer">
     <span style="align: left;"><H3>SiteMap</H3></span><HR>
