--- a/vitae.html
+++ b/vitae.html
@@ -53,7 +53,7 @@
     <H5>Microsoft Entity Framework on VS2022+, NodeJS-Express, JoomlaAPI, WordpressAPI, MiniOrangePlugin</H5>
     <H4>Programming Languages(19)</H5>
     <H5>Lisp, Fortran, C, C++, C#, PHP, Webmin/Virtual SL, Python, HTML, Javascript, ReactJS/IonicJS, Visual Basic, Visual C++, Java/JavaFX, Motorola Assembler, ProcomPlus SL, NodeJS, UnixShell Scripting, Haskell</H5>
-    <H4>Visualization Frameworks(6)</H4><H5>Tableau Public/Desktop, SAP Crystal Reports, Microsoft Office Tools, Python Libraries, RStudio/RFrameworks, Infovista Network Management Systems.</H5>
+    <H4>Visualization Frameworks(6)</H4><H5>Tableau Public/Desktop, SAP Crystal Reports, Microsoft Office Tools, Python Viz Libraries, RStudio/RFrameworks, Infovista Network Management Systems, ChartJS, D3 JS Libraries.</H5>
 </div>
 <div id="hist_sql">
     <H4>Database Platforms(9)</H5>
