--- a/vitae.html
+++ b/vitae.html
@@ -35,10 +35,9 @@
 <div class="container">    
 <div align="center"><H1>Selected Vitae</H1></div>
 <div align="center">John S. Stritzinger</div>
-<div align="center">Global Tech Executive</div>    
-<div align="center">Graduate Assistant - University of South Carolina</div>
-<div align="center">1800 Washington Street</div>
+<div align="center">Global Tech Executive & Graduate Researcher</div>    
 <div align="center">Columbia, South Carolina 29201</div><BR><BR>
+<div align="center">stritzj@email.sc.edu</div><BR><BR>
 <div align="center"><span align=center><img src="./images/image1.png" width="200px" height="200px"></span></div>    
 <HR>
 <div id="hist_work"><H4>Database Administration(DBA) & Principal Data Architecture Assignments</H4><H5>Bank of America/MBNA Treasury Systems, M&T Bank/Wilmington Trust Treasury Systems, Bank of America Consumer Services, Bank of America Global Operations, Centurylink/Level(3) Network Operations, Cincinnati Bell Enterprise Sales Operations, Bank of America Call Center Operations</H5></div>
