--- a/portfoliopage.html
+++ b/portfoliopage.html
@@ -94,12 +94,21 @@ margin: auto 0;
   </div>
   <div class="column1" style="background-color:lightgreen; border: 2pt solid black">
     <h2>App Sites</h2>
-        <ul>
+      <ul>
         <li><a href="./assignments/01-basic-html/index.html">Assignment1</a></li>
         <li><a href="https://jssg33.github.io/usc242/assignments/02-basic-cs/index.html">Assignment2</a></li>
     </ul>
   </div>
-<div class="column1" style="background-color: pink; border: 2px black solid;"><H2>Research Interests</H2><p>Network Management Systems, SSO Architectures, ERP Sales Tools, Marketing Systems, Enterprise Managment, AI Voice Tools.</p></div>
+<div class="column1" style="background-color: pink; border: 2px black solid;"><H2>Research Interests</H2>
+<ul>
+    <li>Network Management Systems</li>
+    <li>SSO Architectures</li>
+    <li>ERP Sales Tools</li>
+    <li> Marketing Systems</li>
+    <li>Enterprise Managment</li>
+    <li>AI Voice Tools</li>
+</ul>
+</div>
 </div>
 </div>
     </body>
