--- a/assignments/03-layout-design/index.html
+++ b/assignments/03-layout-design/index.html
@@ -131,7 +131,14 @@ ul li a {
 ul li a:hover {
   background-color: #111111;
 }
-
+#title1{width: 120px; height: 75px;}
+#title2{width: 120px; height: 75px;}
+#title3{width: 120px; height: 75px;}
+#title4{width: 120px; height: 75px;}
+#titlepic1{width: 120px; height: 300px;}
+#titlepic2{width: 120px; height: 300px;}
+#titlepic3{width: 120px; height: 300px;}
+#titlepic4{width: 120px; height: 300px;}
 </style>
      </head>
   <body>
@@ -179,6 +186,8 @@ ul li a:hover {
     <li><a href="https://gamecocksonline.com/sports/mbball/cumestats/">Team Stats</a></li>
 </ol>
 </div>
+<div style="float: right;"><div id="title1">Title1</div><div id="title2">Title2</div><div id="title3">Title3</div><div id="title4">Title4</div></div>
+<div style="float: right;"><div id="title1pic"><img src="./images/titlepic1.png"/></div><div id="title2pic"><img src="./images/titlepic2.png"/></div><div id="title3pic"><img src="./images/titlepic3.png"/></div><div id="titlepic4"><img src="./images/titlepic4.png"/></div></div>
 <div class="column" style="background-color: lightgreen;"><div align="center"><span align=center><img src="./images/miami1.jpg" width="47%" height="330px"/><img src="./images/miami3.jpg" width="47%" height="330px"/></span></div></div>
 <div class="column1" style="background-color: lightblue;">
   <div class="tablecontainer">
