--- a/assignments/03-layout-design/index.html
+++ b/assignments/03-layout-design/index.html
@@ -139,6 +139,11 @@ ul li a:hover {
 #titlepic2{width: 120px; height: 300px;}
 #titlepic3{width: 120px; height: 300px;}
 #titlepic4{width: 120px; height: 300px;}
+#VeryImp{
+  width-max: 400px; 
+  height-max: 400px;
+  margin-left: 30px;
+  autoscroll y: 0;
 </style>
      </head>
   <body>
@@ -172,6 +177,15 @@ ul li a:hover {
 <div align="center"><h1>Portia's Layout Page</h1></div>
 <div align="center"><h2>Spring 26</h2></div>
 <HR>
+<div id="topfeatures">
+  <div id="VeryImp">
+    <H3>VeryImportantText</H3>
+    <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
+  <div style="float: right;"><span><div id="title1">Title1</div><div id="title2">Title2</div><div id="title3">Title3</div><div id="title4">Title4</div></span></div>
+  <div style="float: right;"><div><img id="title1pic" src="./images/titlepic1.png"/></div><div><img id="title2pic" src="./images/titlepic2.png"/></div><div><img id="title3pic" src="./images/titlepic3.png"/></div><div id="title4pic" id="titlepic4"><img src="./images/titlepic4.png"/></div></div>
+</div>
 <div align="center">
 <div class="row">
 <div class="column1" style="background-color: pink;">
@@ -186,8 +200,7 @@ ul li a:hover {
     <li><a href="https://gamecocksonline.com/sports/mbball/cumestats/">Team Stats</a></li>
 </ol>
 </div>
-<div style="float: right;"><div id="title1">Title1</div><div id="title2">Title2</div><div id="title3">Title3</div><div id="title4">Title4</div></div>
-<div style="float: right;"><div id="title1pic"><img src="./images/titlepic1.png"/></div><div id="title2pic"><img src="./images/titlepic2.png"/></div><div id="title3pic"><img src="./images/titlepic3.png"/></div><div id="titlepic4"><img src="./images/titlepic4.png"/></div></div>
+
 <div class="column" style="background-color: lightgreen;"><div align="center"><span align=center><img src="./images/miami1.jpg" width="47%" height="330px"/><img src="./images/miami3.jpg" width="47%" height="330px"/></span></div></div>
 <div class="column1" style="background-color: lightblue;">
   <div class="tablecontainer">
@@ -203,11 +216,6 @@ ul li a:hover {
     </div>
 </div>
 </div>
-</div>
-<div id="VeryImp">
-<H3>VeryImportantText</H3>
-<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
 <HR>
 <BR><BR><BR>
