--- a/assignments/03-layout-design/index.html
+++ b/assignments/03-layout-design/index.html
@@ -144,6 +144,10 @@ ul li a:hover {
   height-max: 400px;
   margin-left: 30px;
   autoscroll y: 0;
+  float: left;
+  height: 400px; 
+  overflow-y: auto;
+}
 </style>
      </head>
   <body>
