--- a/assignments/03-layout-design/index.html
+++ b/assignments/03-layout-design/index.html
@@ -188,7 +188,7 @@ ul li a:hover {
     <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </div>
   <div style="float: right;"><span><div id="title1">Title1</div><div id="title2">Title2</div><div id="title3">Title3</div><div id="title4">Title4</div></span></div>
-  <div style="float: right;"><div><img id="title1pic" src="./images/titlepic1.png"/></div><div><img id="title2pic" src="./images/titlepic2.png"/></div><div><img id="title3pic" src="./images/titlepic3.png"/></div><div id="title4pic" id="titlepic4"><img src="./images/titlepic4.png"/></div></div>
+  <div style="float: right;"><div><img id="title1pic" src="./images/titlepic1.png"/></div><div><img id="title2pic" src="./images/titlepic2.png"/></div><div><img id="title3pic" src="./images/titlepic3.png"/></div><div><img id="titlepic4" src="./images/titlepic4.png"/></div></div>
 </div>
 <div align="center">
 <div class="row">
