--- a/assignments/03-layout-design/index.html
+++ b/assignments/03-layout-design/index.html
@@ -6,7 +6,8 @@
     Spring 2026
     January 21st, 2026
 -->
-<link rel="stylesheet" href="site.css"> 
+<link rel="stylesheet" href="../../site.css"> 
+<link rel="stylesheet" href="pageoveride.css">     
 <style>
 .tablecontainer
 {
