--- a/assignments/03-layout-design/layout.html
+++ b/assignments/03-layout-design/layout.html
@@ -57,27 +57,32 @@
 
 </section>
 
-<!-- IDEA SECTIONS (3 COLUMNS) -->
 <section class="ideas">
 
     <div class="idea">
-        <h3>Idea One</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae orci nec urna 
-           tincidunt fermentum.</p>
+        <div class="idea-text">
+            <h3>Idea One</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae orci nec urna 
+               tincidunt fermentum.</p>
+        </div>
         <img src="https://dummyimage.com/200x200/cccccc/000000" alt="Idea Image">
     </div>
 
     <div class="idea">
-        <h3>Idea Two</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget ligula non erat 
-           ullamcorper tincidunt.</p>
+        <div class="idea-text">
+            <h3>Idea Two</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget ligula non erat 
+               ullamcorper tincidunt.</p>
+        </div>
         <img src="https://dummyimage.com/200x200/aaaaaa/000000" alt="Idea Image">
     </div>
 
     <div class="idea">
-        <h3>Idea Three</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse potenti. 
-           Integer vel libero nec velit facilisis tincidunt.</p>
+        <div class="idea-text">
+            <h3>Idea Three</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse potenti. 
+               Integer vel libero nec velit facilisis tincidunt.</p>
+        </div>
         <img src="https://dummyimage.com/200x200/bbbbbb/000000" alt="Idea Image">
     </div>
 
