--- a/assignments/03-layout-design/updated.html
+++ b/assignments/03-layout-design/updated.html
@@ -121,34 +121,37 @@
 
 </section>
 
-<!-- IDEA SECTIONS -->
 <section class="ideas">
 
-    <div class="idea">
+    <!-- IDEA 1: image left -->
+    <div class="idea left">
         <div class="idea-text">
             <h3>Idea One</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vitae orci nec urna tincidunt fermentum.</p>
+            <p>Lorem ipsum dolor sit amet...</p>
         </div>
         <img src="https://dummyimage.com/200x200/cccccc/000000" alt="Idea 1">
     </div>
 
-    <div class="idea">
+    <!-- IDEA 2: image right -->
+    <div class="idea right">
         <div class="idea-text">
             <h3>Idea Two</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eget ligula non erat ullamcorper tincidunt.</p>
+            <p>Lorem ipsum dolor sit amet...</p>
         </div>
         <img src="https://dummyimage.com/200x200/aaaaaa/000000" alt="Idea 2">
     </div>
 
-    <div class="idea">
+    <!-- IDEA 3: image left -->
+    <div class="idea left">
         <div class="idea-text">
             <h3>Idea Three</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse potenti. Integer vel libero nec velit facilisis tincidunt.</p>
+            <p>Lorem ipsum dolor sit amet...</p>
         </div>
         <img src="https://dummyimage.com/200x200/bbbbbb/000000" alt="Idea 3">
     </div>
 
 </section>
+
 
 <footer>
     <p>© 2025 Cocky Consulting, Inc.</p>
