--- a/assignments/03-layout-design/updated.html
+++ b/assignments/03-layout-design/updated.html
@@ -61,22 +61,22 @@
     <div class="tasks">
         <div class="task-item">
             <h3>Title 1</h3>
-            <img src="./images/titlepic1.png" alt="Task 1">
+            <img src="./images/titlepic1.png" width="200px" height="300px" alt="Task 1">
         </div>
 
         <div class="task-item">
             <h3>Title 2</h3>
-            <img src="./images/titlepic2.png" alt="Task 2">
+            <img src="./images/titlepic2.png" width="200px" height="300px" alt="Task 2">
         </div>
 
         <div class="task-item">
             <h3>Title 3</h3>
-            <img src="./images/titlepic3.png" alt="Task 3">
+            <img src="./images/titlepic3.png" width="200px" height="300px" alt="Task 3">
         </div>
 
         <div class="task-item">
             <h3>Title 4</h3>
-            <img src="./images/titlepic4.png" alt="Task 4">
+            <img src="./images/titlepic4.png" width="200px" height="300px" alt="Task 4">
         </div>
     </div>
 
