--- a/assignments/03-layout-design/layout.html
+++ b/assignments/03-layout-design/layout.html
@@ -40,17 +40,17 @@
         </div>
 
         <div class="task-item">
-            <img src="https://dummyimage.com/120x120/aaaaaa/000000" alt="Miami Beach Activity">
+            <img src="https://dummyimage.com/120x120/aaaaaa/000000" width="200px" height="300px" alt="Miami Beach Activity">
             <h3>Surfing Lessons</h3>
          </div>
 
         <div class="task-item">
             <h3>Jet Ski Rental</h3>
-            <img src="https://dummyimage.com/120x120/bbbbbb/000000" alt="Miami Beach Activity">
+            <img src="https://dummyimage.com/120x120/bbbbbb/000000" width="200px" height="300px" alt="Miami Beach Activity">
         </div>
 
         <div class="task-item">
-            <img src="https://dummyimage.com/120x120/aaaaaa/000000" alt="Miami Beach Activity">
+            <img src="https://dummyimage.com/120x120/aaaaaa/000000" width="200px" height="300px" alt="Miami Beach Activity">
             <h3>Sunset Cruise</h3>
         </div>
     </div>
@@ -61,11 +61,11 @@
 
     <!-- IDEA 1: image left -->
     <div class="idea left">
+        <img src="https://dummyimage.com/200x200/cccccc/000000" alt="Idea 1">
         <div class="idea-text">
             <h3>Idea One</h3>
             <p>Lorem ipsum dolor sit amet...</p>
         </div>
-        <img src="https://dummyimage.com/200x200/cccccc/000000" alt="Idea 1">
     </div>
 
     <!-- IDEA 2: image right -->
@@ -79,12 +79,12 @@
 
     <!-- IDEA 3: image left -->
     <div class="idea left">
+        <img src="https://dummyimage.com/200x200/bbbbbb/000000" alt="Idea 3">
         <div class="idea-text">
             <h3>Idea Three</h3>
             <p>Lorem ipsum dolor sit amet...</p>
         </div>
-        <img src="https://dummyimage.com/200x200/bbbbbb/000000" alt="Idea 3">
-    </div>
+      </div>
 
 </section>
 
