--- a/assignments/03-layout-design/layout.html
+++ b/assignments/03-layout-design/layout.html
@@ -33,27 +33,37 @@
            tincidunt tincidunt. Curabitur id sapien nec justo bibendum tincidunt.</p>
     </div>
 
-    <div class="tasks">
-        <div class="task-item">
-            <h3>Beach Volleyball</h3>
-            <img src="https://dummyimage.com/120x120/cccccc/000000" alt="Miami Beach Activity">
+   <div class="tasks">
+
+    <!-- ROW 1: TITLES -->
+    <div class="task-headers">
+        <div class="task-header">Beach Volleyball</div>
+        <div class="task-header">Surfing Lessons</div>
+        <div class="task-header">Jet Ski Rental</div>
+        <div class="task-header">Sunset Cruise</div>
+    </div>
+
+    <!-- ROW 2: IMAGES -->
+    <div class="task-images">
+        <div class="task-image">
+            <img src="https://dummyimage.com/200x300/cccccc/000000" alt="Beach Volleyball">
         </div>
 
-        <div class="task-item">
-            <img src="https://dummyimage.com/120x120/aaaaaa/000000" width="200px" height="300px" alt="Miami Beach Activity">
-            <h3>Surfing Lessons</h3>
-         </div>
-
-        <div class="task-item">
-            <h3>Jet Ski Rental</h3>
-            <img src="https://dummyimage.com/120x120/bbbbbb/000000" width="200px" height="300px" alt="Miami Beach Activity">
+        <div class="task-image">
+            <img src="https://dummyimage.com/200x300/aaaaaa/000000" alt="Surfing Lessons">
         </div>
 
-        <div class="task-item">
-            <img src="https://dummyimage.com/120x120/aaaaaa/000000" width="200px" height="300px" alt="Miami Beach Activity">
-            <h3>Sunset Cruise</h3>
+        <div class="task-image">
+            <img src="https://dummyimage.com/200x300/bbbbbb/000000" alt="Jet Ski Rental">
+        </div>
+
+        <div class="task-image">
+            <img src="https://dummyimage.com/200x300/aaaaaa/000000" alt="Sunset Cruise">
         </div>
     </div>
+
+</div>
+
 
 </section>
 
