--- a/assignments/03-layout-design/layout.html
+++ b/assignments/03-layout-design/layout.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flexbox Layout Project</title>
+    <link rel="stylesheet" href="../../site.css">
+    <link rel="stylesheet" href="pageoveride.css">
     <link rel="stylesheet" href="layout.css">
 </head>
 <body>
