--- a/assignments/03-layout-design/layout.html
+++ b/assignments/03-layout-design/layout.html
@@ -6,7 +6,7 @@
     <title>Flexbox Layout Project</title>
     <link rel="stylesheet" href="../../site.css">
     <link rel="stylesheet" href="pageoveride.css">
-    <link rel="stylesheet" href="layout.css">
+    <link rel="stylesheet" href="layout2.css">
 </head>
 <body>
 
