--- a/assignments/03-layout-design/updated.html
+++ b/assignments/03-layout-design/updated.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portia's Layout - Flexbox</title>
-
+    <link rel="stylesheet" href="../../site.css">
+    <link rel="stylesheet" href="pageoveride.css">
     <link rel="stylesheet" href="layout.css">
 </head>
 
