--- a/assignments/03-layout-design/updated.html
+++ b/assignments/03-layout-design/updated.html
@@ -43,8 +43,8 @@
 </nav>
 
 <header>
-    <h1>Portia's Layout Page</h1>
-    <h2>Spring 2026</h2>
+    <h4>Portia's Layout Page</h4>
+    <h5>Spring 2026</h5>
 </header>
 
 <!-- TOP SECTION: IMPORTANT TEXT + TASKS -->
@@ -59,27 +59,27 @@
     <div class="tasks">
 
         <div class="task-item">
-            <h3>Title 1</h3>
-            <a href="#"><img src="./images/titlepic1.png" alt="Title 1"></a>
+            <h3>Beach Volleyball</h3>
+            <a href="#"><img src="./images/titlepic1.png" alt="Beach Volleyball"></a>
         </div>
 
         <div class="task-item">
-            <h3>Title 2</h3>
-            <a href="#"><img src="./images/titlepic2.png" alt="Title 2"></a>
+            <h3>Surfing Lessons</h3>
+            <a href="#"><img src="./images/titlepic2.png" alt="Surfing Lessons"></a>
         </div>
 
         <div class="task-item">
-            <h3>Title 3</h3>
-            <a href="#"><img src="./images/titlepic3.png" alt="Title 3"></a>
+            <h3>Jet Ski Rental</h3>
+            <a href="#"><img src="./images/titlepic3.png" alt="Jet Ski Rental"></a>
         </div>
 
         <div class="task-item">
-            <h3>Title 4</h3>
-            <a href="#"><img src="./images/titlepic4.png" alt="Title 4"></a>
+            <h3>Sunset Cruise</h3>
+            <a href="#"><img src="./images/titlepic4.png" alt="Sunset Cruise"></a>
         </div>
 
     </div>
-
+        
 </section>
 
 <!-- MIDDLE SECTION: 3 FLEX COLUMNS -->
