--- a/assignments/03-layout-design/updated.html
+++ b/assignments/03-layout-design/updated.html
@@ -82,7 +82,37 @@
         
 </section>
 
-<!-- MIDDLE SECTION: 3 FLEX COLUMNS -->
+
+<!-- IDEA SECTIONS -->
+<section class="ideas">
+
+    <div class="idea left">
+        <div class="idea-text">
+            <h3>Idea One</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        </div>
+        <img src="https://dummyimage.com/200x200/cccccc/000000" alt="Idea 1">
+    </div>
+
+    <div class="idea right">
+        <div class="idea-text">
+            <h3>Idea Two</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        </div>
+        <img src="https://dummyimage.com/200x200/aaaaaa/000000" alt="Idea 2">
+    </div>
+
+    <div class="idea left">
+        <div class="idea-text">
+            <h3>Idea Three</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        </div>
+        <img src="https://dummyimage.com/200x200/bbbbbb/000000" alt="Idea 3">
+    </div>
+
+</section>
+
+<!-- BOTTOM SECTION: 3 FLEX COLUMNS -->
 <section class="middle-columns">
 
     <!-- CENTER COLUMN: MIAMI IMAGES -->
@@ -119,34 +149,6 @@
 
 </section>
 
-<!-- IDEA SECTIONS -->
-<section class="ideas">
-
-    <div class="idea left">
-        <div class="idea-text">
-            <h3>Idea One</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-        </div>
-        <img src="https://dummyimage.com/200x200/cccccc/000000" alt="Idea 1">
-    </div>
-
-    <div class="idea right">
-        <div class="idea-text">
-            <h3>Idea Two</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-        </div>
-        <img src="https://dummyimage.com/200x200/aaaaaa/000000" alt="Idea 2">
-    </div>
-
-    <div class="idea left">
-        <div class="idea-text">
-            <h3>Idea Three</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-        </div>
-        <img src="https://dummyimage.com/200x200/bbbbbb/000000" alt="Idea 3">
-    </div>
-
-</section>
 
 <footer>
     <p>© 2025 Cocky Consulting, Inc.</p>
