--- a/assignments/03-layout-design/layout.html
+++ b/assignments/03-layout-design/layout.html
@@ -48,19 +48,19 @@
     <!-- ROW 2: IMAGES -->
     <div class="task-images">
         <div class="task-image">
-            <img src="https://dummyimage.com/200x300/cccccc/000000" alt="Beach Volleyball">
+            <img src="https://dummyimage.com/200x300/cccccc/000000" width="200px" height="300px" alt="Beach Volleyball">
         </div>
 
         <div class="task-image">
-            <img src="https://dummyimage.com/200x300/aaaaaa/000000" alt="Surfing Lessons">
+            <img src="https://dummyimage.com/200x300/aaaaaa/000000" width="200px" height="300px" alt="Surfing Lessons">
         </div>
 
         <div class="task-image">
-            <img src="https://dummyimage.com/200x300/bbbbbb/000000" alt="Jet Ski Rental">
+            <img src="https://dummyimage.com/200x300/bbbbbb/000000" width="200px" height="300px" alt="Jet Ski Rental">
         </div>
 
         <div class="task-image">
-            <img src="https://dummyimage.com/200x300/aaaaaa/000000" alt="Sunset Cruise">
+            <img src="https://dummyimage.com/200x300/aaaaaa/000000" width="200px" height="300px" alt="Sunset Cruise">
         </div>
     </div>
 
@@ -73,7 +73,7 @@
 
     <!-- IDEA 1: image left -->
     <div class="idea left">
-        <img src="https://dummyimage.com/200x200/cccccc/000000" alt="Idea 1">
+        <img src="https://dummyimage.com/200x200/cccccc/000000" height="200px" width="200px" alt="Idea 1">
         <div class="idea-text">
             <h3>Idea One</h3>
             <p>Lorem ipsum dolor sit amet...</p>
@@ -86,12 +86,12 @@
             <h3>Idea Two</h3>
             <p>Lorem ipsum dolor sit amet...</p>
         </div>
-        <img src="https://dummyimage.com/200x200/aaaaaa/000000" alt="Idea 2">
+        <img src="https://dummyimage.com/200x200/aaaaaa/000000" height="200px" width="200px" alt="Idea 2">
     </div>
 
     <!-- IDEA 3: image left -->
     <div class="idea left">
-        <img src="https://dummyimage.com/200x200/bbbbbb/000000" alt="Idea 3">
+        <img src="https://dummyimage.com/200x200/bbbbbb/000000" height="200px" width="200px" alt="Idea 3">
         <div class="idea-text">
             <h3>Idea Three</h3>
             <p>Lorem ipsum dolor sit amet...</p>
