--- a/assignments/03-layout-design/layout.html
+++ b/assignments/03-layout-design/layout.html
@@ -70,7 +70,7 @@
 </section>
 
 <section class="ideas">
-
+ <div class="ideacontainer" style="max-width: 1600px; margin: 0 auto;">
     <!-- IDEA 1: image left -->
     <div class="idea left">
         <div class="idea-text">
@@ -97,7 +97,7 @@
         </div>
         <img src="https://dummyimage.com/200x200/bbbbbb/000000" height="200px" width="200px" alt="Idea 3">
       </div>
-
+   </div>
 </section>
 
 
