--- a/assignments/03-layout-design/index.html
+++ b/assignments/03-layout-design/index.html
@@ -85,7 +85,7 @@
 
 <!-- IDEA SECTIONS -->
 <section class="ideas">
-
+ <div class="ideacontainer" style="max-width: 1600px; margin: 0 auto;">
     <div class="idea left">
         <div class="idea-text">
             <h3>Idea One</h3>
@@ -109,7 +109,7 @@
         </div>
         <img src="https://dummyimage.com/200x200/bbbbbb/000000" alt="Idea 3">
     </div>
-
+ </div>
 </section>
 
 <!-- BOTTOM SECTION: 3 FLEX COLUMNS -->
