--- a/assignments/03-layout-design/layout.html
+++ b/assignments/03-layout-design/layout.html
@@ -70,7 +70,7 @@
 </section>
 
 <section class="ideas">
- <div class="ideacontainer" style="max-width: 1600px; margin: 0 auto;">
+ <div class="ideacontainer" style="max-width: 90%; margin: 0 auto;">
     <!-- IDEA 1: image left -->
     <div class="idea left">
         <div class="idea-text">
