--- a/assignments/03-layout-design/index.html
+++ b/assignments/03-layout-design/index.html
@@ -85,7 +85,7 @@
 
 <!-- IDEA SECTIONS -->
 <section class="ideas">
- <div class="ideacontainer" style="max-width: 1600px; margin: 0 auto;">
+ <div class="ideacontainer" style="max-width: 95%; margin: 0 auto;">
     <div class="idea left">
         <div class="idea-text">
             <h3>Idea One</h3>
