--- a/assignments/03-layout-design/index.html
+++ b/assignments/03-layout-design/index.html
@@ -84,6 +84,7 @@
 
 
 <!-- IDEA SECTIONS -->
+<div class="ideacontainer">
 <section class="ideas">
     <div class="idea left">
         <div class="idea-text">
@@ -109,6 +110,7 @@
         <img src="https://dummyimage.com/200x200/bbbbbb/000000" alt="Idea 3">
     </div>
 </section>
+</div>
 
 <!-- BOTTOM SECTION: 3 FLEX COLUMNS -->
 <section class="middle-columns">
