--- a/assignments/03-layout-design/index.html
+++ b/assignments/03-layout-design/index.html
@@ -84,8 +84,9 @@
 
 
 <!-- IDEA SECTIONS -->
-<div class="ideacontainer">
-<section class="ideas">
+<div class="ideacontainer" style="background-color: lightgrey;">
+<HR color="blue">
+    <section class="ideas">
     <div class="idea left">
         <div class="idea-text">
             <h3>Idea One</h3>
@@ -93,7 +94,7 @@
         </div>
         <img src="https://dummyimage.com/200x200/cccccc/000000" alt="Idea 1">
     </div>
-
+<HR color="blue">
     <div class="idea right">
         <div class="idea-text">
             <h3>Idea Two</h3>
@@ -101,7 +102,7 @@
         </div>
         <img src="https://dummyimage.com/200x200/aaaaaa/000000" alt="Idea 2">
     </div>
-
+<HR color="blue">
     <div class="idea left">
         <div class="idea-text">
             <h3>Idea Three</h3>
@@ -110,6 +111,7 @@
         <img src="https://dummyimage.com/200x200/bbbbbb/000000" alt="Idea 3">
     </div>
 </section>
+<HR color="blue">    
 </div>
 
 <!-- BOTTOM SECTION: 3 FLEX COLUMNS -->
