--- a/assignments/03-layout-design/index.html
+++ b/assignments/03-layout-design/index.html
@@ -46,7 +46,7 @@
     <h4>Portia's Layout Page</h4>
     <h5>Spring 2026</h5>
 </header>
-
+<div class="ideacontainer" style="background-color: lightgrey;">
 <!-- TOP SECTION: IMPORTANT TEXT + TASKS -->
 <section class="top-section">
 
@@ -84,7 +84,6 @@
 
 
 <!-- IDEA SECTIONS -->
-<div class="ideacontainer" style="background-color: lightgrey;">
     <section class="ideas">
     <div class="idea left">
         <HR color="blue">    
@@ -115,8 +114,6 @@
     <HR color="blue">    
     </div>
 </section>
-
-</div>
 
 <!-- BOTTOM SECTION: 3 FLEX COLUMNS -->
 <section class="middle-columns">
@@ -154,11 +151,11 @@
     </div>
 
 </section>
+</div>
 
-
-<footer>
-    <p>© 2025 Cocky Consulting, Inc.</p>
-</footer>
 
 </body>
+<footer class="footer">
+    <p>© 2025 Cocky Consulting, Inc.</p>
+</footer>
 </html>
