--- a/assignments/03-layout-design/index.html
+++ b/assignments/03-layout-design/index.html
@@ -46,7 +46,7 @@
     <h4>Portia's Layout Page</h4>
     <h5>Spring 2026</h5>
 </header>
-<div class="ideacontainer" style="background-color: lightgrey;">
+<div class="mastercontainer">
 <!-- TOP SECTION: IMPORTANT TEXT + TASKS -->
 <section class="top-section">
 
