--- a/assignments/03-layout-design/index.html
+++ b/assignments/03-layout-design/index.html
@@ -152,10 +152,8 @@
 
 </section>
 </div>
-
-
-</body>
-<footer class="footer">
+<footer>
     <p>© 2025 Cocky Consulting, Inc.</p>
 </footer>
+</body>
 </html>
